sort lines basic finish